[package]
name = "rhizo-types"
version = "0.1.5"
edition = "2021"
description = "A collection of common Structs and Enums used in the software components that comprise the Rhizo network"
license = "MIT"

[dependencies]
borsh = "0.10.3"
serde = {version = "1.0.188", features=["derive"]}

[lib]
crate-type = ["lib"]
